@@ -1,4 +1,5 @@
 5.0-alpha1
+ * Remove unnecessary Netty dependencies after upgrade to version 4.1.96 (CASSANDRA-18729)
  * Prevent InaccessibleObjectException when the Leak Detector is traversing objects (CASSANDRA-18708)
  * Remove legacy command line options from cassandra-stress (CASSANDRA-18529)
  * Remove commitlog_sync_batch_window_in_ms (CASSANDRA-17161)
